--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Web site created using create-react-app" />
 </head>
 
-<body>
+<body class="bg-[#F4F6F9]">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="application"></div>
 </body>
